# letters

./: CMakeLists.txt  README.md
include/: file_buffer.h  file_manager.h  path_list.h  text_editor.h  utils.h
src/: file_buffer.c  file_manager.c  main.c  path_list.c  text_editor.c  utils.c
